# rl_trading

./: pyproject.toml
notebooks/: create_fx_dataset.ipynb  environment.ipynb  train_ppo.ipynb
rl_trading/environments/: base_environment.py  fx_environment.py
rl_trading/models/: fx_model.py
src/environments/: base_environment.py  data_processing.py  fx_environment.py
tests/: conftest.py  test_fx_environment.py
