[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rl_trading"
version = "0.0.1"
description = "Reinforcement Learning Algorithm for trading"
authors = [
    {name = "Ivan Kolesnikov", email = "ivan_kolesnikov@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.13"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "torch>=2.7.0",
    "ray==2.52.1",
    "gymnasium>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_trading"]
exclude = ["tests*", "notebooks*", "data*"]